--- a/custom.css
+++ b/custom.css
@@ -3,54 +3,54 @@ body {
  font-family: 'Julee', cursive;
 }
 
-#buttons-bar {
-  margin-top: 40px;
-  text-align: center;
-}
-
 #panel {
   margin: 0 auto;
   margin-top: 40px;
-
   width: 285px;
   height: 285px;
-
-  background-color: #696047;
-  border-radius: 20px;
-
-  border: 5px solid #fff;
+  background-color: #fafafa;
+  border-radius: 10px;
+  box-shadow: 0px 5px 30px 0px rgba(0,0,0,0.8);
 }
 
 #panel-message {
   font-family: 'Oxygen', sans-serif;
+  font-weight: bold;
   font-size: 35px;
   text-align: center;
   padding-left: 10px;
   padding-right: 10px;
-  padding-top: 30%;
-  padding-bottom: 30%;
+  padding-top: 25%;
+  padding-bottom: 10%;
+}
+
+#panel-buttons {
+  text-align: center;
+}
+
+.panel-button {
+  background-color: #fafafa;
+  border-radius: 5px;
+  padding: 7.5px;
+  margin: 2.5px;
 }
 
 #board {
   display: none;
-
-  padding: 1px;
   background-color: #F9EED7;
   margin: 0 auto;
-
   margin-top: 40px;
   margin-bottom: 40px;
-
   width: 285px;
   height: 285px;
-  border-radius: 20px;
-  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  border-radius: 10px;
+  box-shadow: 0px 5px 30px 0px rgba(0,0,0,0.8);
 }
 
 .internal-shadow {
+  height: 100%;
   box-shadow: inset 0 0 10px #000000;
-  border-radius: 20px;
-  padding-top: 5.5px;
+  border-radius: 10px;
 }
 
 .line {
@@ -111,7 +111,7 @@ footer {
   letter-spacing: 1px;
   font-weight: 600;
   font-size: 14px;
-  color: black;
+  color: grey;
   text-align: center;
   width: 100%;
   margin-top: 30px;
