--- a/custom.css
+++ b/custom.css
@@ -1,15 +1,34 @@
 body {
  background-color: #A7D49B;
+ margin-top: 65px;
 }
 
 #panel {
   margin: 0 auto;
-  margin-top: 40px;
   width: 285px;
   height: 285px;
   background-color: #fafafa;
   border-radius: 10px;
   box-shadow: 0px 5px 30px 0px rgba(0,0,0,0.8);
+}
+
+#panel-turn {
+  margin: 0 auto;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  width: 285px;
+  height: 50px;
+  background-color:  #fafafa;
+  box-shadow: 0px 5px 30px 0px rgba(0,0,0,0.8);
+  text-align: center;
+  display: none;
+}
+
+#panel-turn-message {
+  font-family: 'Oxygen', sans-serif;
+  font-size: 20px;
+  padding-top: 10px;
+  font-weight: bold;
 }
 
 #panel-message {
